src/app/app.component.css
.links {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  margin-top: 5px;
}

.header {
  display: flex;
  justify-content: center;
}

.custom-message {
  position: fixed;
  bottom: 0;
  margin: 18px;
  z-index: 1000;
  background-color: transparent;
}

.copy-button {
  margin-left: 7px;
  cursor: pointer;
  padding: 0px 2px;
  font-size: 12px;
  border: 1px solid #ccc;
}

.tooltip-copy {
  background-color: black;
  color: white;
  text-align: center;
  padding: 5px;
  border-radius: 6px;
  z-index: 1;
}

.github-logo {
  color: white;
  font-size: 35px;
  margin-top: 10px;
}

.github-logo:hover {
  color: #ddd;
}

.github-button {
  margin-bottom: 10px;
}

.how-to-play-header {
  display: flex;
  justify-content: center;
  margin-top: 8px;
  margin-bottom: 5px;
}

.footer {
  background-color: #004d40; /* Fondo de color azul oscuro verdoso */
  display: flex;
  flex-direction: column; /* Cambia la dirección del flex a columna */
  align-items: center; 
  margin-top: 5px;
  margin-bottom: 5px;
}

.footer-text {
  color: white; /* Color de texto blanco */
  font-size: 16px; /* Tamaño de fuente */
}

.how-to-play-text {
  background-color: #f9f9f9; /* Color de fondo claro */
  border: 1px solid #ddd; /* Borde gris claro */
  border-radius: 5px; /* Bordes redondeados */
  padding: 15px; /* Espaciado interno */
  font-family: Arial, sans-serif; /* Fuente */
  font-size: 17px; /* Tamaño de fuente */
  line-height: 1.6; /* Altura de línea */
  color: #333; /* Color de texto */
  margin: 0 30px 30px 35px; /* Márgenes a los lados y abajo */
}

.how-to-play-text a {
  color: #007bff; /* Color del enlace */
  text-decoration: none; /* Sin subrayado */
}

.acestream-link {
  margin: 5px;
  padding: 6px;
  border: 1px solid #ccc;
  border-radius: 5px;
  background-color: #f9f9f9;
  font-size: 16px;
  cursor: pointer;
  text-decoration: none;
}

.acestream-link:hover {
  transform: scale(1.05);
  transition: transform 0.2s;
  background-color: #f0f0f0;
}

.how-to-play-text a:hover {
  text-decoration: underline; /* Subrayado al pasar el ratón */
}

.futbol-tv-agendas {
  display: flex;
  justify-content: center;
  margin-top: 5px;
  margin-bottom: 5px;
}

.header-enlaces {
  display: flex;
  justify-content: center;
  margin-top: 5px;
  margin-bottom: 9px;
}

.agenda-header {
  display: flex;
  justify-content: center;
  margin-top: 5px;
  margin-bottom: 5px;
}

.links-container {
  display: flex;
}

.column {
  flex: 1;
  margin-right: 10px;
}

.column:last-child {
  margin-right: 0;
}

.iframe-container {
  position: relative;
  width: 400px;
  height: 401px;
  margin-bottom: 10px;
}

.spinner-container {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  z-index: 10;
}

@media (max-width: 600px) {
  .how-to-play-text {
    margin: 0 10px 20px 10px; /* Reducir márgenes en pantallas pequeñas */
    font-size: 15px; /* Reducir tamaño de fuente */
  }

  .footer-text {
    font-size: 14px; /* Reducir tamaño de fuente */
  }

  .github-logo {
    font-size: 30px; /* Reducir tamaño del logo */
  }

  .acestream-link {
    font-size: 14px; /* Reducir tamaño de fuente */
    padding: 5px; /* Reducir padding */
  }
}

